--- a/package.json
+++ b/package.json
@@ -13,5 +13,8 @@
   "author": "",
   "license": "ISC",
   "packageManager": "pnpm@10.24.0",
-  "type": "module"
+  "type": "module",
+  "dependencies": {
+    "cheerio": "^1.1.2"
+  }
 }
