--- a/package.json
+++ b/package.json
@@ -16,5 +16,8 @@
   "type": "module",
   "dependencies": {
     "cheerio": "^1.1.2"
+  },
+  "devDependencies": {
+    "typescript": "^5.9.3"
   }
 }
