--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
   "packageManager": "pnpm@10.24.0",
   "type": "module",
   "dependencies": {
-    "cheerio": "^1.1.2"
+    "cheerio": "^1.1.2",
+    "csv": "^6.4.1",
+    "csv-stringify": "^6.6.0"
   },
   "devDependencies": {
     "typescript": "^5.9.3"
