--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "magbo-parser": "./src/cli/index.cjs"
   },
   "scripts": {
-    "run": "node src/cli/index.js"
+    "run": "node src/cli/index.js",
+    "example": "node src/cli/index.js test.csv 123 \"sole биде\""
   },
   "keywords": [],
   "author": "",
